--- a/src/routes/home/home.module.css
+++ b/src/routes/home/home.module.css
@@ -86,3 +86,9 @@
     padding: 1rem;
   }
 }
+
+@media (max-width: 600px) {
+  .bannerBox {
+    margin-top: 56px;
+  }
+}
